Add gulp and gulp-sass for quick start with SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,10 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>#003 Daily UI-100 Days Challenge</title>
-  <title>Sign up page</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <title>landing page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
   
 </head>
@@ -29,7 +26,6 @@
     <div class="col-xs-12 col-md-4 col-lg-4">
       <h2>Create</h2>
       <p>Creativity is allowing yourself to make mistakes. Art is knowing which ones to keep.</p>
-      
     </div>
     <div class="col-xs-12 col-md-4 col-lg-4">
       <h2>Share</h2>
@@ -67,10 +63,6 @@
     <p>&copy; Practice makes perfect</p>
   </div>
 </div>
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js'></script>
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
 
-  
 </body>
 </html>
