Add minor makeup changes

--- a/src/index.html
+++ b/src/index.html
@@ -2,67 +2,66 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>landing page</title>
+  <title>Landing page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel="stylesheet" href="css/style.css">
-
-  
 </head>
 
 <body>
-  <!-- Main -->
-<div class="main">
-  <div class="container">
-    <h1>Create</h1>
-    <p>Every artist was first an amateur</p>
-    <a class="btn" href="#">Start now</a>
-  </div>
-</div>
+<!-- Main -->
+    <div class="main">
+          <div class="container">
+                <h1>Create</h1>
+                <p>Every artist was first an amateur</p>
+                <a class="btn" href="#">Start now</a>
+          </div>
+    </div>
 
 <!-- Supporting -->
-<div class="supporting">
-  <div class="container">
-    <div class="col-xs-12 col-md-4 col-lg-4">
-      <h2>Create</h2>
-      <p>Creativity is allowing yourself to make mistakes. Art is knowing which ones to keep.</p>
+    <div class="supporting">
+          <div class="container">
+                <div class="col-xs-12 col-md-4 col-lg-4">
+                      <h2>Create</h2>
+                      <p>Creativity is allowing yourself to make mistakes. Art is knowing which ones to keep.</p>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4">
+                      <h2>Share</h2>
+                      <p>Share your drawings so the others can see them. Art is not what you see but what you make others see.</p>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4">
+                      <h2>Exhibit</h2>
+                      <p>Make an exhibition in one of our galleries around the world.</p>
+                </div>
+          </div>
+          <div class="clearfix"></div>
     </div>
-    <div class="col-xs-12 col-md-4 col-lg-4">
-      <h2>Share</h2>
-      <p>Share your drawings so the others can see them. Art is not what you see but what you make others see.</p>
-    </div>
-    <div class="col-xs-12 col-md-4 col-lg-4">
-      <h2>Exhibit</h2>
-      <p>Make an exhibition in one of our galleries around the world.</p>
-    </div>
-  </div>
-  <div class="clearfix"></div>
-</div>
 
 <!-- Feature -->
-<div class="feature">
-  <div class="container">
-    <h2>Create. Exhibit. Inspire. Change the world.</h2>
-  </div>
-</div>
+    <div class="feature">
+          <div class="container">
+                <h2>Create. Exhibit. Inspire. Change the world.</h2>
+          </div>
+    </div>
 
 <!-- Supporting -->
-<div class="supporting">
-  <div class="container">
-    <h2>Go Premium</h2>
-    <p>Take your passion seriously. Make it thrive.</p>
-    <a class="btn" href="#">Learn more</a>
-  </div>
-</div>
+    <div class="supporting">
+          <div class="container">
+                <h2>Go Premium</h2>
+                <p>Take your passion seriously. Make it thrive.</p>
+                <a class="btn" href="#">Learn more</a>
+          </div>
+    </div>
 
 <!-- Footer -->
-<div class="footer">
-  <div class="container">
-    <h2>Stop scrolling. Start creating.</h2>
-    <a class="btn" href="#">Start now</a>
-    <p>&copy; Practice makes perfect</p>
-  </div>
-</div>
+    <div class="footer">
+          <div class="container">
+                <h2>Stop scrolling. Start creating.</h2>
+                <a class="btn" href="#">Start now</a>
+                <p> &copy; Practice makes perfect</p>
+          </div>
+    </div>
 
 </body>
 </html>
+<!-- Made with love -->
